修改代码, pom文件, 兼容编译器版本